--- a/estilo/style.css
+++ b/estilo/style.css
@@ -51,8 +51,8 @@ section p {
 }
 
 section {
-    padding-top: 10vh;
-    padding-bottom: 10vh;
+    padding-top: 15vh;
+    padding-bottom: 15vh;
     line-height: 2em;
 }
 
@@ -77,14 +77,16 @@ section.imagem > p {
 
 section#img01 {
     background-image: url('../img/C-Bum.jpg');
-    background-position: ;
+    background-position: center top;
+    background-size: 20%;
     background-size: cover;
+    
     
 
 }
 
 section#img02 {
-    background-image: url('../marmita-fitness-receitas-magnus-personal.webp');
+    background-image: url('../img/02.jpg');
     background-position: center center;
     background-size: cover;
 
