--- a/estilo/style.css
+++ b/estilo/style.css
@@ -168,11 +168,13 @@ section#img03 {
     font-size: 22px;
     padding-top: 0%;
     padding-bottom: 1%;
+    text-align: center;
 
 }
 
 .p2 {
     padding-top: 0%;
     padding-bottom: 0%;
+    text-align: center;
 
 }
