--- a/estilo/style.css
+++ b/estilo/style.css
@@ -156,7 +156,7 @@ section#img03 {
 .p {
     background-color: rgba(83, 83, 83, 0.37);
     border-radius: 5px;
-    width: 325px;
+    width: 305px;
     height: 100px;
     position: relative;
     margin-left: auto;
@@ -167,14 +167,14 @@ section#img03 {
 .p1 {
     font-size: 22px;
     padding-top: 0%;
-    padding-bottom: 1%;
+    padding-bottom: 0px;
     text-align: center;
 
 }
 
 .p2 {
-    padding-top: 0%;
-    padding-bottom: 0%;
+    padding-top: 0px;
+    padding-bottom: 5px;
     text-align: center;
 
 }
