--- a/estilo/style.css
+++ b/estilo/style.css
@@ -60,6 +60,12 @@ section.normal {
     background-color: rgb(255, 255, 255);
     color: black;
     text-align: center;
+    border-radius: 5px;
+}
+
+section.normal img {
+    
+    border-radius: 5px;
 }
 
 section.imagem {
@@ -178,3 +184,4 @@ section#img03 {
     text-align: center;
 
 }
+
